# parsera-pieces

./: README.md  pyproject.toml  setup.py  streamlit-parsera-example.py  test.py
parsera/: main.py
parsera/engine/: model.py  simple_extractor.py
parsera_pieces/: __init__.py  main.py
parsera_pieces/engine/: model.py
